--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@
     --color-white: #fff;
     --color-light: rgba(255, 255, 255, 0.6);
 
-    --transiton: all 400ms ease;
+    --transition: all 400ms ease;
 
     --container-width-lg: 75%;
     --container-width-md: 86%;
@@ -38,7 +38,8 @@ body{
     background: var(--color-bg);
     color: var(--color-white);
     line-height: 1.7;
-    background-image: url(./assets/bg-texture.png);
+    /* background: #000; */
+    background-image: url(./assets/bg-texture.png); 
 }
 
 /* General styles */
@@ -58,7 +59,6 @@ h1{
 
 section{
     margin-top: 8rem;
-    height: 100vh;
 }
 
 section > h2, section > h5{
