--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -40,8 +40,7 @@
 
 form{
     display: flex;
-    flex-direction: column;   
-    justify-content: center;
+    flex-direction: column;    
     gap: 1.2rem;
 }
 
@@ -53,6 +52,10 @@ input, textarea{
     border: 2px solid var(--color-primary-variant);
     resize: none;
     color: var(--color-white);
+}
+
+textarea::placeholder{
+    font-size: 1rem;
 }
 
 input:hover, textarea:hover{
