--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -53,7 +53,10 @@ header{
     border-radius: 12rem 12rem 0 0;
     overflow: hidden;
     padding: 5rem 1.5rem 1.5rem 1.5rem;
+    padding-right: 3rem;
 }
+
+
 
 /* ---------SCROLL DOWN---------- */
 .scroll__down{
